--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
    <head>
    	<script src="1.js"></script>
+	   <style>
+		   #pho1{
+		   margin-top 50px
+		   }
+	   </style>
    </head>
 <body onkeypress="window.alert('You pressed a key')">
 <p id="par1" onclick="innerHTML = 'Heiliges Römisches Reich'">Holy Roman Empire</p>
 
 <button onclick="cha()">change</button>
 	<center>
-
-	    <img src="https://external-preview.redd.it/dymaHZ05am1wYM1jeoSloIWzvxtUI7BRom6K5ffjQIQ.jpg?auto=webp&s=5041c75295f7cbaa17295d14b3470c64461a05b1" width="40%" height="40%" onmouseover="src='https://th.bing.com/th/id/R.827a6921a63b575bdc4d35656feaa315?rik=dbC47blOvqETcw&pid=ImgRaw&r=0'">
+	    <img id='pho1 src="https://external-preview.redd.it/dymaHZ05am1wYM1jeoSloIWzvxtUI7BRom6K5ffjQIQ.jpg?auto=webp&s=5041c75295f7cbaa17295d14b3470c64461a05b1" width="40%" height="40%" onmouseover="src='https://th.bing.com/th/id/R.827a6921a63b575bdc4d35656feaa315?rik=dbC47blOvqETcw&pid=ImgRaw&r=0'">
   	</center><br>
 
 <h1 id="res" onclick="ftc()">Result would be here</h1>
