--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    	<script src="1.js"></script>
 	   <style>
 		   #pho1{
-		   margin-top 50px
+		   margin-top: 50px;
 		   }
 	   </style>
    </head>
