--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
    <head>
    	<script src="1.js"></script>
-	   <style>
-		   #pho1{
-		   margin-top: 50px;
-		   }
-	   </style>
+   	<style>
+   		#pho1{
+   			margin-top: 50px;
+   		}
+   	</style>
    </head>
 <body onkeypress="window.alert('You pressed a key')">
-<p id="par1" onclick="innerHTML = 'Heiliges Römisches Reich'">Holy Roman Empire</p>
+<p id="par1">Holy Roman Empire</p>
 
-<button onclick="cha()">change</button>
+<button onclick="cha()">change color</button>
+<button onclick="document.getElementById('par1').innerHTML = 'Heiliges Römisches Reich'">change content</button>
 	<center>
 	    <img id="pho1" src="https://external-preview.redd.it/dymaHZ05am1wYM1jeoSloIWzvxtUI7BRom6K5ffjQIQ.jpg?auto=webp&s=5041c75295f7cbaa17295d14b3470c64461a05b1" width="40%" height="40%" onmouseover="src='https://th.bing.com/th/id/R.827a6921a63b575bdc4d35656feaa315?rik=dbC47blOvqETcw&pid=ImgRaw&r=0'">
   	</center><br>
 
-<h1 id="res" onclick="ftc()">Result would be here</h1>
-
+<h1 id="res" onclick="ftc()">Click this content to show the result of calculation</h1><br>
 <button onclick="sum()">Here shows the sum</button><br>
 
 <button onclick="wgu()">Here we greet you</button>
